feat!: end-to-end generic API envelopes, RFC7807 problems, and generics-aware client generation
# Server (customer-service)
- Add uniform RFC7807 error handling:
  - Introduced layered @RestControllerAdvice handlers:
    - ValidationExceptionHandler (400, field errors, constraint violations)
    - JsonExceptionHandler (400, unreadable/invalid JSON, unrecognized fields)
    - SpringHttpExceptionHandler (404/405/400 parameter issues)
    - ApplicationExceptionHandler (404 domain not-found, 500 fallback)
  - Centralized helpers in `ProblemSupport` (type URIs, baseProblem, attachErrors).
  - Added `ErrorItem` and `ProblemExtensions` records for structured error payloads.
- OpenAPI enrichment for errors:
  - `GlobalErrorResponsesCustomizer` injects 400/404/405/500 responses with `application/problem+json`.
  - Ensures `ProblemDetail` + `ErrorItem` schemas present (component-level).
- Common response model improvements:
  - `Page<T>` record (content, page, size, totals, hasNext/Prev).
  - `Meta` record (requestId, serverTime, sort) with helpers.
  - Constants and extension keys moved under `OpenApiSchemas`.

# OpenAPI (server-side generation metadata)
- Auto-register type-safe wrappers:
  - `AutoWrapperSchemaCustomizer` scans controller return types and adds composed
    `ServiceResponse<...>` wrappers into components.
  - Enriches wrappers with vendor extensions:
    - `x-api-wrapper`, `x-api-wrapper-datatype`
    - `x-data-container` (e.g., `Page`) and `x-data-item` (e.g., `CustomerDto`)
  - Robust resolution for `$ref`, `allOf`, and array `items` (handles 3.1 `JsonSchema`).
- Standardized extension constants in `OpenApiSchemas`.

# Client (customer-service-client)
- Strongly-typed core:
  - Introduced records:
    - `Page<T>` (immutable `content` defensive copy)
    - `ClientMeta` (immutable copy of sort list)
  - Sort model under `common.sort` package:
    - `SortField` (CUSTOMER_ID/NAME/EMAIL) and `SortDirection` (ASC/DESC) enums
    - `ClientSort` record (defaults t